# textEditorQt

./: AutoSaveManager.cpp  AutoSaveManager.h  CMakeLists.txt  FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h  RecentFilesManager.cpp  RecentFilesManager.h  SearchManager.cpp  SearchManager.h  SettingsManager.cpp  SettingsManager.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TextEditor.cpp  TextEditor.h  Theme.h  main.cpp
tests/: CMakeLists.txt  TestAutoSaveManager.cpp  TestFileManager.cpp  TestRecentFilesManager.cpp  TestSearchManager.cpp  TestSettingsManager.cpp  TestSyntaxHighlighter.cpp  TestTextEditor.cpp  test_main.cpp
tests/scenarios/: CMakeLists.txt  scenario_autosave_recovery.cpp  scenario_file_lifecycle.cpp  scenario_search_workflow.cpp
